--- a/index.html
+++ b/index.html
@@ -1,43 +1,136 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title> Zadanie-4.6 </title>
-        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v6.0.0/css/all.css">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin >
-        <link rel="stylesheet" href="vendor/bootstrap-grid.css" >
-        <link href="https://fonts.googleapis.com/css2?family=Allura&family=Gruppo&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="css/style.css" >
 
-    </head>
-    <body>
-        <header class="splash">
-            <div class="container">
-                <nav class="navigation">
-                    <div class="row">
-                        <div class="col-lg-4 col-md-2 col-sm-2 py-4">
-                            <h3> Golden</h3>
-                        </div>
-                        <div class="col-lg-8 col-md-10 col-md-10 py-3">
-                            <ul>
-                                <li><a href="#"> Home </a></li>
-                                <li><a href="#"> Services </a></li>
-                                <li><a href="#"> Portfolio </a></li>
-                                <li><a href="#"> About </a></li>
-                                <li><a href="#"> Contact </a></li>
-                            </ul>
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title> Zadanie-4.6 </title>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v6.0.0/css/all.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="stylesheet" href="vendor/bootstrap-grid.css">
+    <link href="https://fonts.googleapis.com/css2?family=Allura&family=Gruppo&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="sass/style.css">
+
+</head>
+
+<body>
+    <header class="splash">
+        <div class="container">
+            <nav class="navigation">
+                <div class="row">
+                    <div class="col-lg-4 col-md-2 col-sm-2 py-4">
+                        <h3> Golden</h3>
+                    </div>
+                    <div class="col-lg-8 col-md-10 col-md-10 py-3">
+                        <ul>
+                            <li><a href="#"> Home </a></li>
+                            <li><a href="#"> Services </a></li>
+                            <li><a href="#"> Portfolio </a></li>
+                            <li><a href="#"> About </a></li>
+                            <li><a href="#"> Contact </a></li>
+                        </ul>
+                    </div>
+                </div>
+            </nav>
+            <div class="title">
+                <h2> Welcome to our studio </h2>
+                <h1> IT'S NICE TO MEET YOU</h1>
+                <a href="#" class="btn btn-warning">Tell me more </a>
+            </div>
+        </div>
+    </header>
+    <section class="services">
+        <div class="container">
+            <h2 class="section-title"> Services </h2>
+            <p> Lorem ipsum dolor sit amet, consectetur</p>
+            <div class="row">
+                <div class="col-12 col-lg-4">
+                    <i class="fa-solid fa-basket-shopping"></i>
+                    <h3> E-Commerce</h3>
+                    <p> Excepteur sint occaecat cupidatat non proident, sunt </p>
+                </div>
+                <div class="col-12 col-lg-4">
+                    <i class="fa-solid fa-laptop"></i>
+                    <h3> Responsive web </h3>
+                    <p> Ut enim ad minim veniam, quis nostrud exercitation ullamco </p>
+                </div>
+                <div class="col-12 col-lg-4">
+                    <i class="fa-solid fa-lock"></i>
+                    <h3> Web security</h3>
+                    <p> Sed ut perspiciatis unde omnis iste natus voluptatem</p>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="portfolio">
+        <div class="container">
+            <h2> OUR PORTFOLIO</h2>
+            <h3>Proin iaculis purus consequat sem cure.</h3>
+            <div class="row">
+                <div class="col-md-4">
+                    <div class="card">
+                        <img
+                            src="https://images.pexels.com/photos/1049764/pexels-photo-1049764.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500">
+                        <div>
+                            <h4>Ebony Ivory</h4>
+                            <p>Branding</p>
                         </div>
                     </div>
-                </nav>
-                <div class="title">
-                    <div class="col" id="home">
-                        <h2> Welcome to our studio </h2>
-                        <h1> IT'S NICE TO MEET YOU</h1>
-                        <button type="button" class="btn btn-warning">Tell me more</button>
+                </div>
+                <div class="col-md-4">
+                    <div class="card">
+                        <img
+                            src="https://images.pexels.com/photos/2058128/pexels-photo-2058128.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500">
+                        <div>
+                            <h4>Smart Stationary</h4>
+                            <p>Print Design</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="card">
+                        <img
+                            src="https://images.pexels.com/photos/4960396/pexels-photo-4960396.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500">
+                        <div>
+                            <h4>Clever Poster</h4>
+                            <p>Print Design</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="card">
+                        <img
+                            src="https://images.pexels.com/photos/4960464/pexels-photo-4960464.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500">
+                        <div>
+                            <h4>Vinyl Record</h4>
+                            <p>Product MockUp</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="card">
+                        <img
+                            src="https://images.pexels.com/photos/270572/pexels-photo-270572.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500">
+                        <div>
+                            <h4>Treehouse Template</h4>
+                            <p>Web Design</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="card">
+                        <img
+                            src="https://images.pexels.com/photos/2901215/pexels-photo-2901215.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500">
+                        <div>
+                            <h4>Burned Logo</h4>
+                            <p>Branding</p>
+                        </div>
                     </div>
                 </div>
             </div>
-        </header>
-    </body>
+        </div>
+    </section>
+
+</body>
+
 </html>
