--- a/index.html
+++ b/index.html
@@ -4,24 +4,27 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title> Zadanie-4.6 </title>
+    <script src="https://kit.fontawesome.com/f1e5c755fe.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v6.0.0/css/all.css">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="vendor/bootstrap-grid.css">
-    <link href="https://fonts.googleapis.com/css2?family=Allura&family=Gruppo&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="sass/style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600&family=Roboto+Slab:wght@200&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="css/style.css">
 
 </head>
 
 <body>
     <header class="splash">
-        <div class="container">
-            <nav class="navigation">
+        <nav class="navigation">
+            <div class="container">
                 <div class="row">
-                    <div class="col-lg-4 col-md-2 col-sm-2 py-4">
-                        <h3> Golden</h3>
+                    <div class="col-10 col-md-2">
+                        <div class="navbar-brand">Golden</div>
                     </div>
-                    <div class="col-lg-8 col-md-10 col-md-10 py-3">
+                    <div class="col-2 col-md-10">
                         <ul>
                             <li><a href="#"> Home </a></li>
                             <li><a href="#"> Services </a></li>
@@ -31,32 +34,32 @@
                         </ul>
                     </div>
                 </div>
-            </nav>
-            <div class="title">
-                <h2> Welcome to our studio </h2>
-                <h1> IT'S NICE TO MEET YOU</h1>
-                <a href="#" class="btn btn-warning">Tell me more </a>
             </div>
+        </nav>
+        <div class="splash-inner">
+            <h1 class="page-title">Welcome to our studio!</h1>
+            <h2 class="page-subtitle">IT'S NICE TO MEET YOU</h2>
+            <a href=# class="btn btn-one">TELL ME MORE</a>
         </div>
     </header>
     <section class="services">
         <div class="container">
-            <h2 class="section-title"> Services </h2>
-            <p> Lorem ipsum dolor sit amet, consectetur</p>
+            <h2> Services </h2>
+            <h3> Lorem ipsum dolor sit amet, consectetur</h3>
             <div class="row">
                 <div class="col-12 col-lg-4">
                     <i class="fa-solid fa-basket-shopping"></i>
-                    <h3> E-Commerce</h3>
+                    <h4> E-Commerce</h4>
                     <p> Excepteur sint occaecat cupidatat non proident, sunt </p>
                 </div>
                 <div class="col-12 col-lg-4">
                     <i class="fa-solid fa-laptop"></i>
-                    <h3> Responsive web </h3>
+                    <h4> Responsive web </h4>
                     <p> Ut enim ad minim veniam, quis nostrud exercitation ullamco </p>
                 </div>
                 <div class="col-12 col-lg-4">
                     <i class="fa-solid fa-lock"></i>
-                    <h3> Web security</h3>
+                    <h4> Web security</h4>
                     <p> Sed ut perspiciatis unde omnis iste natus voluptatem</p>
                 </div>
             </div>
